fixed alignment

--- a/packages/performance-and-incentives/page-components/PublicLeaderboard/components/Body/RightPanel/QuestLeaderBoard/List/styles.module.css
+++ b/packages/performance-and-incentives/page-components/PublicLeaderboard/components/Body/RightPanel/QuestLeaderBoard/List/styles.module.css
@@ -12,7 +12,7 @@
 .winner_item {
 	position: relative;
 	width: calc((100% - 32px) / 3);
-	padding: 16px;
+	padding: 16px 16px 10px;
 	border: 1px solid #f2f2f2;
 	border-radius: 8px;
 }
@@ -28,8 +28,8 @@
 
 .user_data {
 	width: 90%;
-	padding: 0 6px;
-	margin: 0 6px;
+	padding: 0 8px;
+	margin: 0 8px;
 	border-left: 1px solid #f2f2f2;
 }
 
@@ -43,7 +43,7 @@
 
 .score {
 	margin-top: 2px;
-	font-size: 10px;
+	font-size: 12px;
 }
 
 .score_heading {
@@ -52,6 +52,10 @@
 }
 
 .progress_container :global {
+	.ui_progressbar_container {
+		padding: 4px 0;
+	}
+
 	.ui_progressbar_filename {
 		display: none;
 	}
@@ -76,11 +80,11 @@
 	display: flex;
 	align-items: flex-end;
 	justify-content: space-between;
-	margin-top: 4px;
+	margin-top: 6px;
 }
 
 .parameters {
-	font-size: 6px;
+	font-size: 8px;
 	font-weight: 400;
 	color: #bdbdbd;
 }
