--- a/packages/performance-and-incentives/page-components/PublicLeaderboard/components/Body/RightPanel/styles.module.css
+++ b/packages/performance-and-incentives/page-components/PublicLeaderboard/components/Body/RightPanel/styles.module.css
@@ -3,7 +3,7 @@
 	flex-direction: column;
 	justify-content: space-between;
 	width: 50%;
-	height: 70vh;
+	height: 75vh;
 	padding: 0 32px;
 
 	@media (min-width: 2560px) {
